<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_ToDO" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_diary" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_graph" />
    <item
        android:id="@+id/navigation_target"
        android:icon="@drawable/ic_target_black_24dp"
        android:title="@string/title_target" />
    <item
        android:id="@+id/navigation_trivia"
        android:icon="@drawable/ic_trivia_black_24dp"
        android:title="@string/title_trivia" />

</menu>