<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.teststudy1.ui.home.HomeFragment"
        android:label="@string/title_ToDO"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.teststudy1.ui.dashboard.DashboardFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.teststudy1.ui.target.navigation_target"
        android:label="@string/title_graph"
        tools:layout="@layout/navigation_target_fragment" />
    <fragment
        android:id="@+id/navigation_target"
        android:name="com.example.teststudy1.ui.target.navigation_target"
        android:label="navigation_target_fragment"
        tools:layout="@layout/navigation_target_fragment" />
    <fragment
        android:id="@+id/navigation_trivia"
        android:name="com.example.teststudy1.ui.trivia.navigation_trivia"
        android:label="navigation_trivia_fragment"
        tools:layout="@layout/navigation_trivia_fragment" />
</navigation>